<resources>
    <string name="app_name">Qwant</string>
    <string name="menu_action_add_tab">New tab</string>
    <string name="menu_action_add_tab_private">New private tab</string>
    <string name="menu_action_close_tabs">Close All Tabs</string>
    <string name="menu_action_close_tabs_private">Close Private Tabs</string>
    <string name="preferences_remote_debugging">Remote debugging via USB</string>
    <string name="preferences_tracking_protection_normal">Enable in Normal Browsing Mode</string>
    <string name="preferences_tracking_protection_private">Enable in Private Browsing Mode</string>
    <string name="developer_tools_category">Developer tools</string>
    <string name="qwant_category">Qwant</string>
    <string name="tracker_category">Tracking Protection</string>
    <string name="settings">Settings</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_settings">Privacy settings</string>
    <string name="preferences_privacy_summary">Tracking protection, data control</string>
    <string name="private_browsing_title">Private Browsing</string>
    <string name="private_browsing_body"><![CDATA[
<h1>Private Browsing</h1>
<p>When you browse in a Private Window, Reference Browser <strong>does not save</strong>:</p>
<ul class="two-column">
    <li>visited pages</li>
    <li>searches</li>
    <li>cookies</li>
    <li>temporary files</li>
</ul>
<p>Private Browsing <strong>doesn\'t make you anonymous</strong> on the Internet. Your employer or Internet service provider can still know what page you visit.</p>
     ]]></string>
    <string name="default_notification_channel">Browser</string>
    <string name="about_content"><![CDATA[
<p>%1$s puts you in control.</p>
    ]]></string>
    <string name="menu_share_with">Share with…</string>
    <string name="toast_copied">Copied!</string>
    <string name="addon_permissions_dialog_add">Add</string>
    <string name="addon_permissions_dialog_cancel">Cancel</string>
    <string name="assist_recent_search">RECENT SEARCHES</string>
    <string name="assist_on_this_device">ON THIS DEVICE</string>
    <string name="assist_clear_history">Delete</string>
    <string name="assist_clipboard">CLIPBOARD</string>
    <string name="qwant_widget_text">What are you looking for ?</string>
    <string name="addon_settings_recommended_header" translatable="false">Recommended</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="menu_search">Search</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_tabs">Tabs</string>
    <string name="menu_settings" translatable="false">@string/settings</string>
    <string name="menu_back">Back</string>
    <string name="bookmarks_empty_1">The bookmarks list is empty</string>
    <string name="bookmarks_empty_2">Add bookmarks using the menu access on the web page.</string>
    <string name="bookmarks_delete">Delete</string>
    <string name="bookmarks_deleted">Bookmark deleted</string>
    <string name="bookmarks_add">Add bookmark</string>
    <string name="bookmarks_added">Bookmark added</string>
    <string name="bookmarks_modify">Edit bookmark</string>
    <string name="bookmarks_modify_folder">Edit folder</string>
    <string name="bookmark_edit_title">Title</string>
    <string name="bookmark_edit_folder">Folder</string>
    <string name="bookmark_edit_cancel">Cancel</string>
    <string name="bookmark_edit_save">Save</string>
    <string name="bookmark_edit_url" translatable="false">URL</string>
    <string name="context_menu_forward">Forward</string>
    <string name="context_menu_refresh">Refresh</string>
    <string name="context_menu_stop">Stop</string>
    <string name="context_menu_share">Share</string>
    <string name="context_menu_request_desktop">Request desktop site</string>
    <string name="context_menu_add_homescreen">Add to homescreen</string>
    <string name="context_menu_find">Find in Page</string>
    <string name="context_menu_addons">Add-ons</string>
    <string name="context_menu_add_bookmark">Add to bookmarks</string>
    <string name="context_menu_del_bookmark">Delete bookmark</string>
    <string name="context_menu_close_tab">Close this tab</string>
    <string name="context_menu_quit_app">Close the app</string>
    <string name="context_menu_downloads">Downloads</string>
    <string name="history">History</string>
    <string name="history_empty_1">History is empty</string>
    <string name="history_empty_2">Visited pages will show up here</string>
    <string name="history_clear_all">Clear all</string>
    <string name="history_today">Today</string>
    <string name="history_yesterday">Yesterday</string>
    <string name="history_load_more">Load more</string>
    <string name="history_hour_placeholder" translatable="false">%1$d:%2$s</string>
    <string name="history_clear_all_confirm_title">Delete history</string>
    <string name="history_clear_all_confirm_message">Do you really want to delete all history ?</string>
    <string name="history_clear_all_confirm_ok">Clear all</string>
    <string name="settings_main">Settings</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="settings_general">General</string>
    <string name="settings_interface">Interface</string>
    <string name="settings_privacy_clear_data">Clear Data</string>
    <string name="settings_privacy_clear_data_on_close">Clear Data On Quit</string>
    <string name="settings_privacy_clear_data_on_close_summary">Please use the Quit app button to be sure it is applied</string>
    <string name="settings_privacy_personal_data">Personal data</string>
    <string name="cleardata_allsites">All sites data</string>
    <string name="cleardata_cache">Cache</string>
    <string name="cleardata_cookies">Cookies</string>
    <string name="cleardata_sessions">Sessions</string>
    <string name="cleardata_permissions">Permissions</string>
    <string name="cleardata_done">Data has been cleared</string>
    <string name="cleardata_failed">Error clearing data</string>
    <string name="cleardata_tabs">Opened normal tabs</string>
    <string name="cleardata_tabs_private">Opened private tabs</string>
    <string name="settings_general_language">Language</string>
    <string name="settings_general_adultcontent">Adult content filter</string>
    <string name="settings_general_newsonhome">News on homepage</string>
    <string name="settings_general_dark_theme">Theme</string>
    <string name="settings_general_resultsinnewtab">Open results in new tab</string>
    <string name="settings_general_cleardata">Clear browsing data</string>
    <string name="settings_general_launchexternalapp">Open links in native app</string>
    <string name="settings_general_makedefaultbrowser">Set as default browser</string>
    <string name="settings_general_makedefaultbrowser_summary">Open all your links in the Qwant app</string>
    <string name="settings_general_language_interface">Interface language</string>
    <string name="settings_general_language_search">Search results language</string>
    <string name="settings_general_region_search">Search results region</string>
    <string name="settings_adultcontent_none">None</string>
    <string name="settings_adultcontent_moderate">Moderate</string>
    <string name="settings_adultcontent_strict">Strict</string>
    <string name="settings_dark_theme_light">Light theme</string>
    <string name="settings_dark_theme_dark">Dark theme</string>
    <string name="settings_dark_theme_system">Use system settings</string>
    <string name="settings_dark_theme_light_code" translatable="false">0</string>
    <string name="settings_dark_theme_dark_code" translatable="false">1</string>
    <string name="settings_dark_theme_system_code" translatable="false">2</string>
    <string name="settings_rate_app">Rate this app</string>
    <string name="settings_about_menu">About</string>
    <string name="settings_about">About Qwant Browser</string>
    <string name="settings_privacy_policy">Privacy policy</string>
    <string name="settings_license">License (MPL 2.0)</string>
    <string name="browser_client" translatable="false">qwantbrowser</string>
    <string name="homepage_base" translatable="false">https://www.qwant.com/</string>
    <string name="homepage_startwith_filter" translatable="false">https://www.qwant.com/</string>
    <string name="qwantmaps_startwith_filter" translatable="false">https://www.qwant.com/maps/</string>
    <string name="qwantmaps_result_startwith_filter" translatable="false">https://www.qwant.com/maps/place/</string>
    <string name="qwantmusic_startwith_filter" translatable="false">https://www.qwant.com/music/</string>
    <string name="settings_page_base" translatable="false">https://www.qwant.com/settings</string>
    <string name="settings_page_startwith_filter" translatable="false">https://www.qwant.com/settings?client=qwantbrowser</string>
    <string name="privacy_policy_url">https://about.qwant.com/legal/privacy/</string>
    <string name="settings_language_english">English</string>
    <string name="settings_language_french">French</string>
    <string name="settings_language_german">German</string>
    <string name="settings_language_italian">Italian</string>
    <string name="settings_language_spanish">Spanish</string>
    <string name="settings_language_andorra">Andorra</string>
    <string name="settings_language_australia">Australia</string>
    <string name="settings_language_austria">Austria</string>
    <string name="settings_language_belgium">Belgium</string>
    <string name="settings_language_brazil">Brazil</string>
    <string name="settings_language_bulgaria">Bulgaria</string>
    <string name="settings_language_canada">Canada</string>
    <string name="settings_language_chile">Chile</string>
    <string name="settings_language_southkorea">South Korea</string>
    <string name="settings_language_czechrepublic">Czech Republic</string>
    <string name="settings_language_denmark">Denmark</string>
    <string name="settings_language_estonia">Estonia</string>
    <string name="settings_language_finland">Finland</string>
    <string name="settings_language_greece">Greece</string>
    <string name="settings_language_hungary">Hungary</string>
    <string name="settings_language_india">India</string>
    <string name="settings_language_ireland">Ireland</string>
    <string name="settings_language_israel">Israel</string>
    <string name="settings_language_japan">Japan</string>
    <string name="settings_language_malaysia">Malaysia</string>
    <string name="settings_language_mexico">Mexico</string>
    <string name="settings_language_netherlands">Netherlands</string>
    <string name="settings_language_newzealand">New Zealand</string>
    <string name="settings_language_norway">Norway</string>
    <string name="settings_language_philippines">Philippines</string>
    <string name="settings_language_poland">Poland</string>
    <string name="settings_language_portugal">Portugal</string>
    <string name="settings_language_romania">Romania</string>
    <string name="settings_language_russia">Russia</string>
    <string name="settings_language_singapore">Singapore</string>
    <string name="settings_language_sweden">Sweden</string>
    <string name="settings_language_switzerland">Switzerland</string>
    <string name="settings_language_thailand">Thailand</string>
    <string name="settings_language_turkey">Turkey</string>
    <string name="settings_language_unitedstates">United States</string>
    <string name="settings_region_not_displayed" translatable="false">Region not displayed</string>
    <string name="settings_region_english" translatable="false">@string/settings_language_english</string>
    <string name="settings_region_spanish" translatable="false">@string/settings_language_spanish</string>
    <string name="settings_region_portuguese" translatable="false">@string/settings_language_portugal</string>
</resources>