<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/photonWhite"
    android:orientation="vertical"
    android:theme="@style/ThemeQwantNoActionBar">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/bookmarks_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/settings_fragment_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/qwant_background"
            app:titleTextColor="@color/qwant_text"
            app:title="@string/bookmarks" />

        <ImageButton
            android:id="@+id/bookmarks_add_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:padding="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/icon_folder_add"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/bookmarks_noresult_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@color/qwant_background">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            app:srcCompat="@drawable/bookmarks_empty_image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/bookmarks_empty_1"
            android:textColor="@color/menu_items"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/bookmarks_empty_2"
            android:textColor="@color/menu_items"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/bookmarks_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/qwant_background" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:src="@drawable/shadow_gradient"
        android:background="@color/qwant_background" />
</LinearLayout>