<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:context="org.mozilla.reference.browser.assist.Assist"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/widget_search_bar_gradient"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:scaleType="fitXY"
        android:src="@drawable/qwant_widget_top_colors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/widget_search_bar_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/widget_search_bar_gradient" >

        <ImageView
            android:src="@drawable/flat_icon"
            android:id="@+id/custom_notification_widget_logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="16dp" />

        <AutoCompleteTextView
            android:id="@+id/search_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:hint="@string/qwant_widget_text"
            android:imeOptions="actionSearch"
            android:inputType="textAutoComplete"
            android:background="@android:color/transparent"
            android:completionThreshold="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="2dp"
            android:textColor="#5c6f84"
            android:textColorHint="#c8cbd3"
            android:textSize="20sp"
            android:dropDownAnchor="@id/widget_search_bar_layout"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:targetApi="cupcake" />

        <ImageView
            android:src="@drawable/icon_cross"
            android:id="@+id/widget_search_bar_cross"
            android:layout_width="20dp"
            android:layout_marginEnd="12dp"
            android:layout_height="match_parent" />

        <ImageView
            android:src="@drawable/icon_search"
            android:id="@+id/widget_search_bar_magnifier"
            android:layout_width="22dp"
            android:layout_marginEnd="16dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <WebView
        android:id="@+id/webview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/widget_search_bar_layout" />

    <LinearLayout
        android:id="@+id/home_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/widget_search_bar_layout">

        <LinearLayout
            android:id="@+id/clipboard_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/assist_clipboard"
                android:textColor="#c8cbd3"
                android:textSize="17sp" />

            <LinearLayout
                android:id="@+id/clipboard_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="20dp"
                    android:src="@drawable/icon_copy" />

                <TextView
                    android:id="@+id/clipboard_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:textColor="#5c6f84"
                    android:textSize="21sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/assist_recent_search"
                        android:textColor="#c8cbd3"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/assist_on_this_device"
                        android:textColor="#c8cbd3"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/link_erase_history"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="right|top"
                    android:paddingRight="20dp"
                    android:text="@string/assist_clear_history"
                    android:textColor="#5c6f84"
                    android:textSize="16sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout >